# rparser

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs  main.rs  rparser.rs
tests/: 10000_rows.csv  5000_rows.csv  test.rs
