[package]
name = "rparser"
version = "0.1.0"
edition = "2021"

[lib]
name = "rparser"

crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
pyo3 = { version = "0.17.3", features = ["extension-module"] }
