[tool.poetry]
name = "csv-rparser"
version = "0.1.0"
description = ""
authors = ["hectorLop <lopez.almazan.hector@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

